Fix horizontal scroll on small screen.

--- a/styles/blocks/book.styl
+++ b/styles/blocks/book.styl
@@ -89,7 +89,8 @@
 			width: auto;
 		}
 		&__cover {
-			margin-side: (-(2*spacer));
+			margin-side: (-(spacer));
+			padding-side: 0;
 		}
 		&__spreads {
 			display: block;
